--- a/catalog-info-1.yaml
+++ b/catalog-info-1.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Genymotion Cloud Car - Android Automotive OS 14.0 (arm64)
-  description: An Android Automotive emulator on EC2. With AWS APIs, you can build or extend your own solution on top of Genymotion. Embed it into your website or product to promote your application.
+  name: Genymotion-Cloud-Car
+  description: An Android Automotive OS 14.0 emulator on EC2 (arm64). With AWS APIs, you can build or extend your own solution on top of Genymotion. Embed it into your website or product to promote your application.
   tags:
     - drivesphere
 spec:
